roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/04-networking/4.2-route-misconfigured/broken/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-4-2-svc
  labels:
    app: lab-4-2-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  selector:
    app: lab-4-2-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
