roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/04-networking/4.2-route-misconfigured/broken/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lab-4-2-route
  labels:
    app: lab-4-2-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  to:
    kind: Service
    name: lab-4-2-svc
  port:
    targetPort: 8443    # BUG: should be 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
